Changing parts about me

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Louie Jie Mahusay</span></li>
-						<li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">info@yoursite.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.yoursite.com</span></li>
-						<li><span class="first-block">Address:</span><span class="second-block">198 West 21th Street, Suite 721 New York NY 10016</span></li>
+						<li><span class="first-block">Full Name:</span><span class="second-block">Muhammad Hafidh Dhiaulhaqi</span></li>
+						<li><span class="first-block">Phone:</span><span class="second-block">+ 974 66979 240</span></li>
+						<li><span class="first-block">Email:</span><span class="second-block">hafidh.haqi@hotmail.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">https://haqi1999.github.io/</span></li>
+						<li><span class="first-block">Address:</span><span class="second-block">42 A Devon Road, Leeds, England, UK, LS2 9BA</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
