Shortened the Website in the about me section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Muhammad Hafidh Dhiaulhaqi</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 974 66979 240</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">hafidh.haqi@hotmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">https://haqi1999.github.io/</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">haqi1999.github.io</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">42 A Devon Road, Leeds, England, UK, LS2 9BA</span></li>
 					</ul>
 				</div>
