--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>My Name is Muhammd Hafidh Dhiaulhaqi. You can call me Haqi! I am from Indonesia but have lived most of my life in Qatar, Since I was in year 2 of primary school. I went to the UK when I was 17 years old for my foundation course in Leeds. And still! </p>
+					<p>Solutions-driven engineer with strong credentials, graduated in both BSc (Eng) and MSE degree in Advanced Mechanical Engineering with a 3.7 GPA. Proven expertise in engineering designs, specifications, planning, and scheduling for large-scale projects. Experienced and reliable CAD designer with a certification of CSWA attained in 2022, lead 3-course projects including water turbine and mechanical systems. In-depth knowledge of IT applications, including SolidWorks 3D/2D, Abaqus, and Microsoft Office. </p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
