Changing Education Section

--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
+									<h3 class="timeline-title">MSE in Advanced Mechanical Engineering</h3>
+									<span class="company">University Of Leeds 2022 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Further enrolled into the Mechanical Engineering field ensuring a more seasoned experience in the industry with new modules and more in depth on what was learned coming on from the bachelors degree.</p>
 								</div>
 							</div>
 						</li>
@@ -189,11 +189,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">BSc (Hons) in Mechanical Engineering </h3>
+									<span class="company">University of Leeds 2018 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>The beginning of my professional achievement, obtained 2:1 for my degree in BSc (Hons) in Mechanical Engineering. Experienced and lead multiple professional projects in a multinational culture, delegated tasks as needed and met deadlines. </p>
 								</div>
 							</div>
 						</li>
@@ -201,11 +201,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">Foundation Course</h3>
+									<span class="company">Leeds International Study Centre 2017 - 2018</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Enrolled into the foundation course specialised for engineering and preparation for Bachelors degree in Mechanical Engineering. Obtained an overall of 89% in grades, including advanced physics, advanced applied maths, and Mechanics.</p>
 								</div>
 							</div>
 						</li>
@@ -213,11 +213,11 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
+									<h3 class="timeline-title">High School Graduation</h3>
+									<span class="company">Newton International School 2008 - 2017</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Graduated from Highschool with IGCSE obtained A* in Maths, Physics. Took all 3 core sciences with environmental studies to ensure education of the required suistainable future is obtained from the very beginning.</p>
 								</div>
 							</div>
 						</li>
