Changing Work Experience

--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">Internal affairs representative</h3>
+									<span class="company">PPI GREATER LEEDS  2019 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Provided databases by utilising microsoft excel and google forms to ensure easing of documentation in weekly events. Further gained experience in leadership by delegating tasks towards colleagues. Collaborated with external PPI branches in the UK to ensure networking towards success.</p>
 								</div>
 							</div>
 						</li>
@@ -148,11 +148,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Vehicle Dynamics Engineer</h3>
+									<span class="company">Leeds Gryhon Racing 2020 - 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Designed conceptual suspension bracket for the buggy using SolidWorks and conducted structural analysis using ABAQUS/FEA. Worked alongside multidisciplinary cultures to meet deadlines as a team.</p>
 								</div>
 							</div>
 						</li>
@@ -160,11 +160,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
+									<h3 class="timeline-title">Business,Operation and Marketing Intern</h3>
+									<span class="company">Bright's Network 2020 - 2020</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Maintained smooth flow of communication with clients to streamline research process and define strategies for the company by using multiple communication channels. Broaden my knowledge in the business industry and how it intertwine with the engineering industry.</p>
 								</div>
 							</div>
 						</li>
