--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 			<div class="services-padding">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>My Services</h2>
+						<h2>Mechanical Engineering Skillset</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -243,7 +243,7 @@
 								<i class="icon-paintbrush"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Design</h3>
+								<h3>Structural Analysis</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -255,7 +255,7 @@
 								<i class="icon-briefcase"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Branding</h3>
+								<h3>Engineering Design</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -267,7 +267,7 @@
 								<i class="icon-search"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Analytics</h3>
+								<h3>Thermodynamics & Fluid Mechanics Skillset</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -283,7 +283,7 @@
 								<i class="icon-bargraph"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Developent</h3>
+								<h3>Manufacturing Processes</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -296,7 +296,7 @@
 								<i class="icon-genius"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Web Marketing</h3>
+								<h3>Coding in Multilple Languages</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
@@ -308,7 +308,7 @@
 								<i class="icon-chat"></i>
 							</span>
 							<div class="feature-copy">
-								<h3>Support</h3>
+								<h3>Systems Evaluation</h3>
 								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
 							</div>
 						</div>
