--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-paintbrush"></i>
+								<i class="icon-library"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Structural Analysis</h3>
