--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 					<div class="col-md-4 text-center">
 						<div class="feature-left">
 							<span class="icon">
-								<i class="icon-chat"></i>
+								<i class="icon-tree2"></i>
 							</span>
 							<div class="feature-copy">
 								<h3>Systems Evaluation</h3>
