--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Structural Analysis</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Utilising hand calculations of FEA & Solid Mechanics and with the help of Abaqus for simulation to ensure structural properties are met.</p>
 							</div>
 						</div>
 					</div>
@@ -256,7 +256,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Engineering Design</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Machine Design and creating engineering drawings with attention to detail meeting the requirements of ISO 8888.</p>
 							</div>
 						</div>
 
@@ -268,7 +268,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Thermodynamics & Fluid Mechanics Skillset</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Hand calculations using thermodynamics laws to analyse the flow of heat in a cycle and jet propulsion. Analysis of Aerodynamics using CFD and recognising the state of the fluid at each section of the body.</p>
 							</div>
 						</div>
 					</div>
@@ -284,7 +284,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Manufacturing Processes</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Research and knowledge on the most optimum manufacturing process of a selected product. </p>
 							</div>
 						</div>
 
@@ -297,7 +297,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Coding in Multilple Languages</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Experience in multiple coding languages proven in both academic and professional projects during the course of the academic & non-academic year. Continuously learning new languages to keep up with the industry.</p>
 							</div>
 						</div>
 
@@ -309,7 +309,7 @@
 							</span>
 							<div class="feature-copy">
 								<h3>Systems Evaluation</h3>
-								<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+								<p>Evaluating of systems using DFMEA and utilising SysML to ensure the understanding of a system is propagated throughout the process.</p>
 							</div>
 						</div>
 					</div>
@@ -327,35 +327,35 @@
 			</div>
 			<div class="row row-pb-md">
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
+					<div class="chart" data-percent="95"><span><strong>MATLAB</strong>95%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+					<div class="chart" data-percent="93"><span><strong>C++</strong>93%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Python</strong>90%</span></div>
 				</div>
 
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+					<div class="chart" data-percent="89"><span><strong>SOLIDWORKS</strong>89%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>SysML</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Microsoft Office</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+					<div class="chart" data-percent="85"><span><strong>Ansys</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>ABAQUS</strong>90%</span></div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left">HTML5</span><span class="value-right">95%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -363,7 +363,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left">Modelio</span><span class="value-right">90%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -371,7 +371,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><span class="name-left">Arduino</span><span class="value-right">80%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -379,7 +379,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">LabVIEW</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -389,7 +389,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
+						<h3><span class="name-left">3D/2D CAD/CAM</span><span class="value-right">100%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -397,7 +397,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Ruby</span><span class="value-right">70%</span></h3>
+						<h3><span class="name-left">Microsoft Automate</span><span class="value-right">70%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-striped active" role="progressbar"
 						  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -405,7 +405,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
+						<h3><span class="name-left">Microsoft BI</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -413,7 +413,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+						<h3><span class="name-left">AI Machine Learning</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
