Changing Microsoft part

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 					<div class="chart" data-percent="85"><span><strong>SysML</strong>85%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Microsoft Office</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Microsoft 365</strong>90%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="85"><span><strong>Ansys</strong>85%</span></div>
