--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+					<p>Please feel free to contact me if any of my engineering skills is to your liking. I am available if you also need assistance as a student in the Mechanical Engineering industry. </p>
 					<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
 				</div>
 			</div>
