Changes made in Project

--- a/index.html
+++ b/index.html
@@ -505,8 +505,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Post on Medium</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Current On Going Projects</h2>
+					<p>In this section, couple of my personal projects is listed below. This is either a hobby of mine or my own self-learning ambitions.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -514,9 +514,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Photoshoot On The Street</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">In Progress</span>
+							<h3><a href="#">F1 Aston Martin CAD</a></h3>
+							<p>Utilising the use of SolidWorks to create a concept of the current F1 Aston Martin car. Iterations of concepts will be continuously updated.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -529,9 +529,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Surfing at Philippines</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">Next Up</span>
+							<h3><a href="#">CFD Analysis of F1 Car</a></h3>
+							<p>The timeline of this project will be conducted after the CAD have been completed. Utilising the use of ANSYS CFD software package. </p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -544,9 +544,9 @@
 					<div class="fh5co-blog animate-box">
 						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
 						<div class="blog-text">
-							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Capture Living On Uderwater</a></h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<span class="posted_on">In Progress</span>
+							<h3><a href="#">Continuous research articles</a></h3>
+							<p>In this project, continuous research progress of suistainable energies, AI progression in the engineering industry and automotive evolvement will be discussed and summarised.</p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
