--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
 						<div class="blog-text">
 							<span class="posted_on">In Progress</span>
 							<h3><a href="#">Continuous research articles</a></h3>
-							<p>In this project, continuous research progress in engineering disciples and key subjects/innovations are discussed & summarised </p>
+							<p>In this project, continuous research progress in engineering disciplines and key subjects/innovations are discussed & summarised </p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
