--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="#" class="work" style="background-image: url(images/portfolio-11.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -450,7 +450,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="#" class="work" style="background-image: url(images/portfolio-33.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
@@ -458,7 +458,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="#" class="work" style="background-image: url(images/portfolio-44.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Design</span>
@@ -490,7 +490,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
+					<a href="#" class="work" style="background-image: url(images/portfolio-88.png);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>Illustration</span>
