--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-1.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-11.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">In Progress</span>
 							<h3><a href="#">F1 Aston Martin CAD</a></h3>
@@ -527,7 +527,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-2.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/F1CFD.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Next Up</span>
 							<h3><a href="#">CFD Analysis of F1 Car</a></h3>
@@ -542,7 +542,7 @@
 				</div>
 				<div class="col-md-4">
 					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-bg" style="background-image: url(images/portfolio-3.jpg);"></a>
+						<a href="#" class="blog-bg" style="background-image: url(images/Engineeringdis.png);"></a>
 						<div class="blog-text">
 							<span class="posted_on">In Progress</span>
 							<h3><a href="#">Continuous research articles</a></h3>
